--- a/LegoController/platformio.ini
+++ b/LegoController/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = m5stack-core2
 framework = arduino
-lib_deps = adafruit/Adafruit PWM Servo Driver Library@^3.0.0
+lib_deps = 
+	adafruit/Adafruit PWM Servo Driver Library@^3.0.0
+	m5stack/M5Core2@^0.1.5
